[package]
name = "FileHosting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"

[[bin]]
name = "client"

[dependencies]
egui = "0.26.2"
egui_extras = { version = "0.26.2", features = ["all_loaders"] }
image = { version = "0.24", features = ["jpeg", "png", "gif", "bmp", "tiff", "webp"] } # Add the types you want support for
tonic = {version = "0.7", features = ["tls", "transport", "channel"]} #, "compression"
serde = { version = "1", features = ["derive"] }
prost = "0.10"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
eframe = { version = "0.26.2", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
egui-video = "0.6.0"
anyhow = "1.0.80"
rfd = "0.13.0"

[build-dependencies]
tonic-build = "0.7"
